chore(swagger): begin fixing swagger docs
