# internal/user/dto/outcome.go
@@ -1,9 +1,11 @@
 package dto
 
+// UserResponse — user data.
 type UserResponse struct {
-	ID           int64  `json:"id"`
-	Name         string `json:"name"`
-	Username     string `json:"username"`
-	Role         string `json:"role"`
+	ID       int64  `json:"id" example:"1"`
+	Name     string `json:"name" example:"Ivan Ivanov"`
+	Username string `json:"username" example:"ivanov"`
+	Role     string `json:"role" example:"ДП"`
+	// PasswordHash does not serialize to JSON.
 	PasswordHash string `json:"-"`
 }
